--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form method="post">
+		<lable>Name :</lable>
+		<input id="name" type="text" minlength="3" maxlength="50"><br>
+		<br><lable>Portfolio :</lable>
+		<input id="portfolio" type="url" required><br><br>
+		<lable>Favorite Color :</lable>
+		<input id="favcolor" type="color"><br><br>
+		<lable>Likeness :</lable>
+		<input id="likeness" type="range" min="1" max="100"><br><br>
+		<input type="submit" value="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
