--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 	<form method="post">
-		<lable for="name">Name :</lable>
+		<lable for='name'>Name :</lable>
 		<input id="name" type="text" minlength="3" maxlength="50"><br>
-		<br><lable for="portfolio">Portfolio :</lable>
+		<br><lable for='portfolio'>Portfolio :</lable>
 		<input id="portfolio" type="url" required><br><br>
-		<lable for="favcolor">Favorite Color :</lable>
+		<lable for='favcolor'>Favorite Color :</lable>
 		<input id="favcolor" type="color"><br><br>
-		<lable for="likeness">Likeness :</lable>
+		<lable for='likeness'>Likeness :</lable>
 		<input id="likeness" type="range" min="1" max="100"><br><br>
 		<input type="submit" value="submit">
 	</form>
