--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 		<input id="name" type="text" minlength="3" maxlength="50"><br>
 		<br><label for='portfolio'>Portfolio :</label>
 		<input id="portfolio" type="url" required><br><br>
-		<label for='favcolor'>Favorite Color :</label>
-		<input id="favcolor" type="color"><br><br>
+		<label for='favColor'>Favorite Color :</label>
+		<input id="favColor" type="color"><br><br>
 		<label for='likeness'>Likeness :</label>
 		<input id="likeness" type="range" min="1" max="100"><br><br>
 		<input type="submit" value="submit">
